--- a/Main_Screen/changePlant.html
+++ b/Main_Screen/changePlant.html
@@ -2,17 +2,13 @@
 <html>
   <head>
     <title>&Auml;ndere Topf</title>
-    <script src="script.js"></script>
+    <script src="changePlant.js"></script>
   </head>
-  <body>
-    <h1>Meine Kr&auml;utertreppe</h1>
-    <table>
-      <tr><td>Topf 1</td><td></td></tr>
-      <tr><td>Keine Pflanze</td><td></td></tr>
-      <tr><td>Ist-Feuchte [%]</td><td>0</td></tr>
-      <tr><td>Soll-Feuchte [%]</td><td>0</td></tr>
-      <tr><td colspan="2"><h3>Feuchte-Verlauf</h3></td></tr>
-      <tr><td><button onclick="">Ändern</button></td><td><button>Löschen</button></td></tr>
-    </table>
+  <body onload="insertData()">
+    <h3 id="changeHeading"></h3>
+    <form>
+      Pflanzenname: <input type="String" size="20">
+      
+    </form>
   </body>
 </html>
