--- a/Main_Screen/changePlant.html
+++ b/Main_Screen/changePlant.html
@@ -7,8 +7,10 @@
   <body onload="insertData()">
     <h3 id="changeHeading"></h3>
     <form>
-      Pflanzenname: <input type="String" size="20">
-      
-    </form>
+      Pflanzenname : <input type="String" size="20">
+      Soll-Feuchte [%] : <input type="number">
+      <input type="submit" value="&Auml;ndern">
+      <button><a href=
+     </form>
   </body>
 </html>
