--- a/Main_Screen/changePlant.html
+++ b/Main_Screen/changePlant.html
@@ -10,7 +10,7 @@
       Pflanzenname : <input type="String" size="20">
       Soll-Feuchte [%] : <input type="number">
       <input type="submit" value="&Auml;ndern">
-      <button><a href=
+      <button onclick="abort();">Abbrechen</button>
      </form>
   </body>
 </html>
