Global Array and Delete function

--- a/Main_Screen/index.html
+++ b/Main_Screen/index.html
@@ -13,7 +13,7 @@
       <tr><td>Soll-Feuchte [%]</td><td id="sollFeuchte1">0</td></tr>
       <tr><td colspan="2"><h3>Feuchte-Verlauf</h3><p id="feuchteHistorie"></p></td></tr>
       <tr><td><button id="changePot1" onclick="changePlant(this);">&Auml;ndern</button></td>
-        <td><button id="deletePot1" onclick="">L&ouml;schen</button></td></tr>
+        <td><button id="deletePot1" onclick="deleteFunction()">L&ouml;schen</button></td></tr>
     </table></div>
   </body>
 </html>
