--- a/Main_Screen/index.html
+++ b/Main_Screen/index.html
@@ -2,18 +2,47 @@
 <html>
   <head>
     <title>Meine Kr&auml;utertreppe</title>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <h1>Meine Kr&auml;utertreppe</h1>
+
+        <!-- Topf 1 -->
     <div><table>
-      <tr><td>Topf 1</td><td></td></tr>
+      <tr><td><h3>Topf 1</h3></td><td></td></tr>
       <tr><td id="plant1">Keine Pflanze</td><td></td></tr>
       <tr><td>Ist-Feuchte [%]</td><td id="istFeuchte1">0</td></tr>
       <tr><td>Soll-Feuchte [%]</td><td id="sollFeuchte1">0</td></tr>
-      <tr><td colspan="2"><h3>Feuchte-Verlauf</h3><p id="feuchteHistorie"></p></td></tr>
+      <tr><td colspan="2"><h3>Feuchte-Verlauf</h3><p id="feuchteHistorie1"></p></td></tr>
       <tr><td><button id="changePot1" onclick="changePlant(this);">&Auml;ndern</button></td>
-        <td><button id="deletePot1" onclick="deleteFunction()">L&ouml;schen</button></td></tr>
+        <td><button id="deletePot1" onclick="deleteFunction();">L&ouml;schen</button></td></tr>
     </table></div>
+    <br/><br/>
+
+    <!-- Topf 2 -->
+    <div><table>
+      <tr><td><h3>Topf 2</h3></td><td></td></tr>
+      <tr><td id="plant2">Keine Pflanze</td><td></td></tr>
+      <tr><td>Ist-Feuchte [%]</td><td id="istFeuchte2">1</td></tr>
+      <tr><td>Soll-Feuchte [%]</td><td id="sollFeuchte2">0</td></tr>
+      <tr><td colspan="2"><h3>Feuchte-Verlauf</h3><p id="feuchteHistorie2"></p></td></tr>
+      <tr><td><button id="changePot2" onclick="changePlant(this);">&Auml;ndern</button></td>
+        <td><button id="deletePot2" onclick="deleteFunction();">L&ouml;schen</button></td></tr>
+    </table></div>
+    <br/><br/>
+
+
+    <!-- Topf 3 -->
+    <div><table>
+      <tr><td><h3>Topf 3</h3></td><td></td></tr>
+      <tr><td id="plant3">Keine Pflanze</td><td></td></tr>
+      <tr><td>Ist-Feuchte [%]</td><td id="istFeuchte3">2</td></tr>
+      <tr><td>Soll-Feuchte [%]</td><td id="sollFeuchte3">0</td></tr>
+      <tr><td colspan="2"><h3>Feuchte-Verlauf</h3><p id="feuchteHistorie3"></p></td></tr>
+      <tr><td><button id="changePot3" onclick="changePlant(this);">&Auml;ndern</button></td>
+        <td><button id="deletePot3" onclick="alert(Pots[0].PflanzenName);">L&ouml;schen</button></td>
+      </tr>
+    </table></div>
+    <br/><br/>
   </body>
 </html>
