--- a/Main_Screen/changePlant.html
+++ b/Main_Screen/changePlant.html
@@ -4,7 +4,7 @@
     <title>&Auml;ndere Topf</title>
     <script src="script.js"></script>
   </head>
-  <body onload="insertData()">
+  <body onload="insertData();">
     <h3 id="changeHeading"></h3>
     <form name="changeData" action="./index.html" method="GET" onsubmit="change();">
       Pflanzenname : <input name="plantName" type="String" size="20">
