--- a/Main_Screen/index.html
+++ b/Main_Screen/index.html
@@ -463,7 +463,7 @@ function showBar(){
   <body onload="loadIndex();">
     <h1>Meine Kr&auml;utertreppe</h1>
     <!-- Topf 1 -->
-    <div><table>
+    <div class="colmain"><table id="table1">
       <tr><td><h3>Topf 1</h3></td><td></td></tr>
       <tr><td id="plant1">Keine Pflanze</td><td></td></tr>
       <tr><td>Ist-Feuchte [%]</td><td id="istFeuchte1">0</td></tr>
@@ -483,7 +483,7 @@ function showBar(){
     <br/><br/>
 
     <!-- Topf 2 -->
-    <div><table>
+    <div class="colmain"><table id="table2">
       <tr><td><h3>Topf 2</h3></td><td></td></tr>
       <tr><td id="plant2">Keine Pflanze</td><td></td></tr>
       <tr><td>Ist-Feuchte [%]</td><td id="istFeuchte2">1</td></tr>
@@ -503,7 +503,7 @@ function showBar(){
     <br/><br/>
 
     <!-- Topf 3 -->
-    <div><table>
+    <div class="colmain"><table id="table3">
       <tr><td><h3>Topf 3</h3></td><td></td></tr>
       <tr><td id="plant3">Keine Pflanze</td><td></td></tr>
       <tr><td>Ist-Feuchte [%]</td><td id="istFeuchte3">2</td></tr>
